[package]
name = "nsuns-server"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
const_format = "0.2.31"
hyper = "0.14.27"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_repr = "0.1.16"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres", "uuid", "chrono"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.1", features = ["add-extension", "trace", "cors", "fs", "catch-panic"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.4.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
axum-macros = "0.3.7"
axum-test-helper = "0.3.0"
serde_json = "1.0.103"

[features]
default = []
openapi = []
