[package]
name = "nsuns-server"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = "0.6.18"
axum-macros = "0.3.7"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
const_format = "0.2.31"
futures = "0.3.29"
http = "0.2.9"
hyper = "0.14.27"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-process = "1.0.13"
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
opentelemetry-http = "0.9.0"
opentelemetry-otlp = "0.13.0"
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
opentelemetry_api = "0.20.0"
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_repr = "0.1.16"
serde_with = "3.4.0"
sqlx = { version = "0.7.1", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "uuid",
  "chrono",
] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.1", features = [
  "add-extension",
  "trace",
  "cors",
  "fs",
  "catch-panic",
] }
tracing = "0.1.37"
tracing-core = "0.1.32"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
utoipa = { version = "3.4.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
axum-test-helper = "0.3.0"
cucumber = "0.20.1"

[features]
default = []
openapi = []

[[test]]
name = "cucumber"
harness = false
