[package]
name = "nsuns-server"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.81"
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["typed-header"]}
axum-macros = "0.4.1"
base64 = "0.21.7"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
const_format = "0.2.31"
futures = "0.3.30"
http = "1.1.0"
hyper = "1.4.1"
jsonwebtoken = "9.3.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-process = "1.0.13"
opentelemetry = { version = "0.24.0", features = ["metrics"] }
opentelemetry-http = "0.13.0"
opentelemetry-otlp = "0.17.0"
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
opentelemetry_api = "0.20.0"
opentelemetry_sdk = { version = "0.24.0", features = ["rt-tokio", "metrics"] }
password-auth = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_repr = "0.1.16"
serde_with = "3.4.0"
sqlx = { version = "0.7.1", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "uuid",
  "chrono",
] }
thiserror = "1.0.43"
time = "0.3.36"
tokio = { version = "1.39.3", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-cookies = { version = "0.10.0", features = ["private"] }
tower-http = { version = "0.5.2", features = [
  "add-extension",
  "trace",
  "cors",
  "fs",
  "catch-panic",
] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
urlencoding = "2.1.3"
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
axum-test-helper = "0.4.0"
cucumber = "0.20.1"

[features]
default = []
openapi = []

[[test]]
name = "cucumber"
harness = false
